--- a/index.html
+++ b/index.html
@@ -153,15 +153,17 @@
 						<div class="inner">
 							<header>
 								<h2>Lets try my game!!!</h2>
-								<a href="http://chengyuenning.github.io/raccoon/">The raccoon jump</a>
-							</header>
+								<a href="http://chengyuenning.github.io/raccoon/">1.The raccoon jump</a>
+								<a href="http://corrineto.github.io/what%20a%20funny%20game!/">Play Now</a>
+
+								</header>
 							<ul class="actions vertical">
 								<li><a href="#" class="button fit special">Activate</a></li>
 								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
-
+ 
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
