--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 						<div class="inner">
 							<header>
 								<h2>Lets try my game!!!</h2>
-								<a href="http://chengyuenning.github.io/raccoon/">1.The raccoon jump</a>
-								<a href="http://corrineto.github.io/what%20a%20funny%20game!/">Play Now</a>
+								<p><a href="http://chengyuenning.github.io/raccoon/">The raccoon jump!come and play!!! </a></p>
+								<a href="http://corrineto.github.io/what%20a%20funny%20game!/">Play Now!!!</a>
 
 								</header>
 							<ul class="actions vertical">
