--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 							<header>
 								<h2>Lets try my game!!!</h2>
 								<p><a href="http://chengyuenning.github.io/raccoon/">The raccoon jump!come and play!!! </a></p>
-								<a href="http://corrineto.github.io/what%20a%20funny%20game!/">Play Now!!!</a>
+								<p><a href="http://corrineto.github.io/what%20a%20funny%20game!">Play Now!!!</a></p>
 
 								</header>
 							<ul class="actions vertical">
